--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <link rel="icon" type="image/png" href="/img/fav.png" />
-    <title>Olink - Job Portal & Social Network HTML</title>
+    <title>catalyst56</title>
     <!-- Slick Slider -->
     <link rel="stylesheet" type="text/css" href="/vendor/slick/slick.min.css" />
     <link
